fix alignment for edit link on h3 headings

--- a/base.less
+++ b/base.less
@@ -554,6 +554,10 @@ h1 .mw-editsection {
 h2 .mw-editsection {
 	padding-top: 15px;
 }
+ 
+h3 .mw-editsection {
+	padding-top: 13px;
+}
 
 /* restrict maximum image size in content */
 .img-responsive img,
